# content-aware-image-resize

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  test.cpp
include/: seam_carver.h
